Align completion with the word being completed

BUG: 485885